# orchestrating-sql-blog-post

./: .gitignore  README.md  WTTR_STUB_SERVICE.md  expr.py  pyproject.toml  source.db  weather_defs.py
01-cron-bash/: README.md  weather_daily.sh
02-airflow/: README.md
02-airflow/dags/: weather_daily_simple.py
03-assets-dbt-dagster/: README.md  dagster_defs.py
03-assets-dbt-dagster/dbt_weather/: dbt_project.yml
03-assets-dbt-dagster/dbt_weather/models/: schema.yml  weather_city_avg.sql
04-expr-plan/: expr.py
dags/: weather_pipeline.py
stub/wttr/: app.py
stub/wttr/data/: j1_basic.json  j1_changed_schema.json
