[project]
name = "xorq-template-penguins"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow[celery]>=3.0.4",
    "dagster>=1.11.7",
    "dbt-core>=1.10.8",
    "ipython>=8.37.0",
    "pins[gcs]>=0.9.0",
    "scikit-learn>=1.7.0",
    "xorq[duckdb]>=0.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]

[tool.uv.sources]
xorq = { git = "https://github.com/xorq-labs/xorq" }
